# point-cloud-denoising

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Spherical_Projection.drawio  compose.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
cmake/: cmake_config.cmake.in  cmake_uninstall.cmake  point_cloud_denoisingConfig.cmake.in
cmake/modules/: FindASan.cmake
data/Back/009_32x1000/: Intensity.avi
data/Back/009_32x1000/distanceImages/: distanceImage0.tiff  distanceImage1.tiff  distanceImage10.tiff  distanceImage11.tiff  distanceImage12.tiff  distanceImage13.tiff  distanceImage14.tiff  distanceImage15.tiff  distanceImage16.tiff  distanceImage17.tiff  distanceImage18.tiff  distanceImage19.tiff  distanceImage2.tiff  distanceImage20.tiff  distanceImage21.tiff  distanceImage22.tiff  distanceImage23.tiff  distanceImage24.tiff  distanceImage25.tiff  distanceImage26.tiff  distanceImage27.tiff  distanceImage28.tiff  distanceImage29.tiff  distanceImage3.tiff  distanceImage30.tiff  distanceImage31.tiff  distanceImage32.tiff  distanceImage33.tiff  distanceImage34.tiff  distanceImage35.tiff  distanceImage36.tiff  distanceImage37.tiff  distanceImage38.tiff  distanceImage39.tiff  distanceImage4.tiff  distanceImage40.tiff  distanceImage41.tiff  distanceImage42.tiff  distanceImage43.tiff  distanceImage44.tiff  (+7 more)
data/Back/009_32x1000/intensityImages/: intensityImage0.tiff  intensityImage1.tiff  intensityImage10.tiff  intensityImage11.tiff  intensityImage12.tiff  intensityImage13.tiff  intensityImage14.tiff  intensityImage15.tiff  intensityImage16.tiff  intensityImage17.tiff  intensityImage18.tiff  intensityImage19.tiff  intensityImage2.tiff  intensityImage20.tiff  intensityImage21.tiff  intensityImage22.tiff  intensityImage23.tiff  intensityImage24.tiff  intensityImage25.tiff  intensityImage26.tiff  intensityImage27.tiff  intensityImage28.tiff  intensityImage29.tiff  intensityImage3.tiff  intensityImage30.tiff  intensityImage31.tiff  intensityImage32.tiff  intensityImage33.tiff  intensityImage34.tiff  intensityImage35.tiff  intensityImage36.tiff  intensityImage37.tiff  intensityImage38.tiff  intensityImage39.tiff  intensityImage4.tiff  intensityImage40.tiff  intensityImage41.tiff  intensityImage42.tiff  intensityImage43.tiff  intensityImage44.tiff  (+7 more)
data/Back/009_32x512/: Distance.avi  Intensity.avi
data/Logs/Log_05s/: .~lock.PointCloud.csv#  BackAzimuths.csv  FrontAzimuths.csv  FrontHardwareTimestamps.csv  FrontPackagesInfo.csv  FrontSoftwareTimestamps.csv
data/Output/Log_05s/Front/0.18_32x1000/: DenoisedDistance.avi  DenoisedIntensity.avi  Distance.avi  Intensity.avi
data/Output/Log_05s/Front/0.18_32x500/: DenoisedDistance.avi  DenoisedIntensity.avi  Distance.avi  Intensity.avi
data/lidar_back/: hardware_timestamps.csv  packages_info.csv  software_timestamps.csv
diagrams/: Image_Denoising.drawio  Principle.drawio  Spherical_image.drawio  Unwrapped_sphere.drawio
include/: CSVReader.h  CSVReader.hpp  ImageDenoising.hpp  SphericalProjection.h  SphericalProjection.hpp
parameters/: parameterFile.xml  parameters.xml
point_cloud_denoising/: CMakeLists.txt
point_cloud_denoising/app/: CMakeLists.txt  point_cloud_denoising_bin.cpp
point_cloud_denoising/src/: CMakeLists.txt
point_cloud_denoising/src/point_cloud_denoising/: CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  ImageDenoising.cpp  ImageDenoising.hpp  SphericalProjection.cpp  SphericalProjection.hpp  csv_reader.cpp  csv_reader.hpp  image_denoising.cpp  image_denoising.hpp  rapidcsv.h  spherical_projection.cpp  spherical_projection.hpp
src/: CSVReader.cpp  ImageDenoising.cpp  SphericalProjection.cpp  denoising.cpp  main.cpp
